2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (go_go): Use 'potbase' and correctly check for
	empty potfiles.
	* templates/show-stats.tmpl: Show 'updated' only if available.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Use svnweb.

	* gnome-modules.xml.in: Added docs for gconf-editor,
	gnome-utils, bug-buddy, gdm2, gnome-keyring-manager,
	gnome-system-tools, gnome-panel, sound-juicer, gnome-desktop.
	Added gfloppy, release-notes modules.

	* releases.py (Releases.list_modules): Set svnmodule.

	* gnome-modules.xml.in: Updated.
	* releases.xml.in: Update data.

	* gnome-modules.xml.in: Switch to SVN.

2007-01-01  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Fix exception when release == None.

2006-12-28  Danilo Šegan  <danilo@gnome.org>

	* teams.py (TranslationTeams.compare_langs): Support .xml on releases.

	* templates/language-release-xml.tmpl: Added.
	* templates/language-release-doc-xml.tmpl: Added.

2006-12-28  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Init description field on
	domains/documents.

2006-12-27  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.doc_l10n_stats): Use potbase
	instead of docpath as domain name for docs.

	* gnome-modules.xml.in:
	* releases.xml.in: Updated a couple of modules.

	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl: sort modules
	by id.

2006-12-27  Danilo Šegan  <danilo@gnome.org>

	Implement bug #104312.

	* update-stats.py (LocStatistics.po_file_stats): Add UTF-8
	encoding check for PO files.

2006-12-18  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add tracker.
	* releases.xml.in: Add 2.18.

2006-12-15  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Use module ID for filename.

2006-10-16  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Use /people/ here as well.

2006-09-15  Danilo Šegan  <danilo@gnome.org>
